[package]
name = "terrain-graph"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A Simple Graph Library for Rust"
authors = ["Teruki TADA <tadateruki.public@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
